# arkadavet-back

./: .gitignore  manage.py  pyproject.toml
arkadavet/: asgi.py  settings.py  urls.py  wsgi.py
products/: admin.py  models.py  serializers.py  views.py
