[tool.poetry]
name = "arkadavet-back"
version = "0.1.0"
description = ""
authors = ["Bogdan Martyshevskiy <vigoroous@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.2.8"
django-rest-framework = "^0.1.0"
django-filter = "^21.1"
django-cors-headers = "^3.10.0"
django-environ = "^0.7.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
